--- a/css/main.css
+++ b/css/main.css
@@ -97,46 +97,80 @@ textarea {
 
 /*Large Background Image*/
 html {
-  background-color: #2e333e;
+  background: url(../img/background.jpg) no-repeat center center fixed;
+  background-size: cover;
   height: 100%;
   width: 100%;
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 400;
-  padding: 2em;
+  font-family: 'Roboto', sans-serif;
+  padding: 0em 2em;
+  font-size: 1.25em;
   color: #fff;
-  height: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-.wrapper {
+.flex-container {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  align-items: center;
+  max-width: 1200px;
 }
 
-.div-1, .div-2, .div-3 {
+p span {
+  font-family: 'Roboto', sans-serif;
+}
+
+header,
+footer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+header h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 3em;
+}
+
+main {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px solid #fff;
+}
+
+main p {
+  font-size: 1.35em;
+}
+
+.flex-items {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #fff;
   line-height: 1.5em;
-  font-size: 1.25em;
-  /* width: 30%; */
-  height: auto;
+  font-size: 1em;
+  border-bottom: 1px solid #555;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
-.wrapper span {
-  font-family: 'Lora', sans-serif;
-  font-style: italic;
-  font-weight: 100;
-  font-size: .8em;
+footer {
+  border-top: 1px solid #fff;
 }
 
+footer ol {
+  padding: 20px 20px 0 0;
+  list-style: none;
+  display: inline-block;
+}
 
-
+footer ol li {
+  display: inline-block;
+  padding-right: 20px;
+}
 
 /* ==========================================================================
    Helper classes
@@ -218,14 +252,22 @@ body {
    Modify as content requires.
    ========================================================================== */
 
-@media all and (min-width: 1200px) {
-    .div-1, .div-2, .div-3 {
+@media all and (max-width: 768px) {
+    body {
+      padding: 1em;
+    }
+}
+
+@media (min-width: 1200px) {
+    .flex-items {
       flex-basis: 30%;
+      border-bottom: none;
     }
 
-    .div-1, .div-2 {
+    #div-2 p {
+      border-left: 1px solid #555;
       border-right: 1px solid #555;
-      padding-right: 30px;
+      padding: 0 40px;
     }
 }
 
